fixed navbar and footer spacing

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,6 +5,12 @@
   text-align: center;
 }
 
+.page-wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
