--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -106,3 +106,9 @@
     padding-bottom: 0.5rem;
   }
 }
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
