--- a/client/src/index.css
+++ b/client/src/index.css
@@ -24,10 +24,16 @@ a:hover {
 
 body {
   margin: 0;
+  padding: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+}
+
+html {
+  margin: 0;
+  padding: 0;
 }
 
 h1 {
